--- a/css/styles.css
+++ b/css/styles.css
@@ -610,6 +610,7 @@ img {
 }
 
 .footer-soc-icon {}
+
 /**---------PORTFOLIO-----------**/
 
 /**PRODUCT**/
@@ -821,11 +822,12 @@ img {
     letter-spacing: 0.04em;
     color: #8E8F99;
     margin-bottom: 4px;
-    display: inline-block;
+    display: block;
 }
 
 .input-wrap {
     position: relative;
+    margin-bottom: 16px;
 }
 
 .modal-input {
@@ -841,16 +843,16 @@ img {
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
 .modal-textarea:focus {
-    border-color: var(--active-color);
+    border-color: var(--primery-color);
 }
 
 .modal-input:focus+.input-icon {
-    fill: var(--active-color);
+    fill: var(--primery-color);
 }
 
 .input-icon {
@@ -874,6 +876,7 @@ img {
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
     resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea::placeholder {
@@ -883,6 +886,9 @@ img {
     color: rgba(46, 47, 66, 0.4);
 }
 
+.modal-field-chexbox {
+    margin-bottom: 24px;
+}
 
 .check-text {
     font-size: 12px;
@@ -893,15 +899,15 @@ img {
     align-items: center;
 }
 
-.check-text a {
-    color: var(--active-color);
+.user-privecy-link {
+    color: var(--primery-color);
     text-decoration: underline;
 }
 
 .input-check:checked+.check-text span {
     background-color: var(--active-color);
     border: none;
-    fill: #ffffff;
+    fill: var(--light-bg-color);
 }
 
 .input-check:focus+.check-text span {
@@ -916,31 +922,32 @@ img {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     margin-right: 8px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-        justify-content: center;
+    justify-content: center;
         fill: transparent;
-    }
-    
-    .modal-send-btn {
-        font-family: inherit;
-        min-width: 169px;
-        height: 56px;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.04em;
-        color: var(--white-color);
-        background-color: var(--primery-color);
-        cursor: pointer;
-        display: block;
-        margin: 24px auto 0;
-        padding: 16px 32px;
-        border: none;
-        border-radius: 4px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-send-btn {
+    font-family: inherit;
+    min-width: 169px;
+    height: 56px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--white-color);
+    background-color: var(--primery-color);
+    cursor: pointer;
+    display: block;
+    margin: 24px auto 0;
+    padding: 16px 32px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .modal-send-btn:hover,
 .modal-send-btn:focus {
