--- a/css/styles.css
+++ b/css/styles.css
@@ -551,7 +551,7 @@ img {
 
 }
 
-.footer-label {
+.footer-form-title {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -601,7 +601,6 @@ img {
     align-items: center;
     justify-content: center;
     gap: 16px;
-    margin-top: 40px;
 }
 
 .footer-btn:hover,
@@ -843,7 +842,7 @@ img {
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus,
@@ -860,7 +859,7 @@ img {
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
-    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-textarea {
@@ -887,7 +886,7 @@ img {
 }
 
 .modal-field-chexbox {
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 
 .check-text {
@@ -899,6 +898,9 @@ img {
     align-items: center;
 }
 
+.user-privacy-check {
+    display: inline-flex;
+}
 .user-privecy-link {
     color: var(--primery-color);
     text-decoration: underline;
@@ -925,7 +927,7 @@ img {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-        fill: transparent;
+    fill: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
