--- a/css/styles.css
+++ b/css/styles.css
@@ -534,13 +534,12 @@ img {
 }
 
 .footer-social-link svg {
-    /* width: 24px;
-                                        height: 24px; */
     fill: var(--light-bg-color);
 }
 
 .footer-form {
     display: flex;
+    gap: 24px;
 }
 
 .footer-form-title {
@@ -550,6 +549,7 @@ img {
     letter-spacing: 0.02em;
     color: var(--white-color);
     margin-bottom: 16px;
+    margin-left: 24px;
 }
 
 .footer-input {
@@ -593,7 +593,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 24px;
+
 }
 
 .footer-btn:hover,
@@ -813,6 +813,7 @@ img {
 .modal-field:nth-child(4) {
     margin-bottom: 16px;
 }
+
 .modal-label {
     font-size: 12px;
     line-height: 1.17;
@@ -892,7 +893,7 @@ img {
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
-    display: flex;
+
     align-items: center;
 }
 
