--- a/css/styles.css
+++ b/css/styles.css
@@ -549,17 +549,19 @@ img {
     letter-spacing: 0.02em;
     color: var(--white-color);
     margin-bottom: 16px;
-    margin-left: 24px;
 }
 
 .footer-input {
     width: 264px;
     height: 40px;
+    font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
     border: 1px solid var(--white-color);
     border-radius: 4px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     background-color: transparent;
-    color: #eceded;
+    color: var(--white-color);
     padding-left: 16px;
 
 }
@@ -567,8 +569,6 @@ img {
 .footer-input::placeholder {
     font-size: 12px;
     line-height: 2;
-    display: flex;
-    align-items: center;
     letter-spacing: 0.04em;
     color: var(--white-color);
 }
